# projekt-group3-project2

./: CMakeLists.txt  CMakeLists_with_Tests.txt  README.md  StepbyStep_Plan.md  csv_ex  csv_ex.c  data.csv  date  date.c  guest.c  guest.h  main.c  print_current_reservations.c  print_current_reservations.h  program  read_reservations.c  read_reservations.h  test.csv  unittest_coordinate.c  unittest_reservation.c  unittests_changes.c  write_user_data_to_csv.c  write_user_data_to_csv.h
csv_ex.dSYM/Contents/: Info.plist
csv_ex.dSYM/Contents/Resources/DWARF/: csv_ex
header/: board_operations.h  changes.h  csv_operations.h  guest.h  reservation.h  user_validation.h
include/: csv_operations.h
reservation/: reservation.csv
source/: board.txt  board_operations.c  changes.c  changes.h  coordinateSystem.c  coordinateSystemConecpt.c  csv_operations.c  csv_operations.h  guest.c  guest.h  main.c  main.cpp  program  reservation.c  reservation.csv  user_validation.c
src/: changes.cpp  main.cpp
test/: CMakeLists.txt  unit_tests.cpp  unittest_changes.cpp  unittest_coordinate.cpp  unittest_reservation.cpp  unittests_board_operations.cpp  unittests_changes.cpp  unittests_csv_operations.cpp
unittests/: board_operations.h  changes.h  csv_operations.h  unit_tests.cpp  unittests_board_operations.cpp  unittests_changes.cpp  unittests_csv_operations.cpp
